2013-09-12  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/prg/compton.jl: added full featured integration
	of the compton compositing manager

	* lisp/sawfish/wm/user.jl: load sawfish.wm.prg.compton

	* doc/AUTOSTART
	* man/news.texi: updated

2013-05-02  Vedat Hallac <vedat@hallac.net>
	* lisp/sawfish/gtk/widget.jl: fix make-choice-item to properly support
	crux theme settings

2013-04-26  Christopher Roy Bratusek <nano@tuxfamily.org>
	* web/*.{html,png}: add files from http://sawfish.tuxfamily.org/

	* .tx/config: updated transifex config

	* po/ru.po: updated russian translation (Alexey516)

	* po/pt_BR.po: updated brazilian portuguese translation (Sandro)

2013-04-25  Christopher Roy Bratusek <nano@tuxfamily.org>
	* debian/changelog
	* configure.in: bump version to 1.9.91 "Steam Train"

	* man/news.texi: update

2013-04-16  Jose Antonio Ortega Ruiz <jao@gnu.org>
	* lisp/sawfish/wm/tile/tiler.jl: make never-tile window-matcher work
	properly, notify user when switching tiling-mode

	* lisp/sawfish/wm/tile/column.jl: #:resize predicate (whether windows
	should be resized to fit into columns)

2013-04-16  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/tile/tiler.jl: fix erroring when destroying last
	tileabe window

2013-04-15  Jose Antonio Ortega Ruiz <jao@gnu.org>
	* lisp/sawfish/wm/tile/tall.jl: #:right predicate (locate
	master-window on the right instead of left), #:master predicate (set
	what window can be the master-window in tall tiling)

2013-04-02  Christopher Roy Bratusek <nano@tuxfamily.org>
	* debian/control: make package sawfish depend on rep and rep-gtk

2013-03-30  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/ext/expose.jl: remove. We now have sawfish.wm.tile.*

	* lisp/sawfish/wm/edge/actions.jl
	* lisp/sawfish/wm/edge/conf.jl
	* lisp/sawfish/wm/edge/misc.jl
	* lisp/sawfish/wm/tile/tiler.jl
	* lisp/sawfish/wm/tile/utils.jl