@@ -104,6 +104,11 @@ Compton is a fork of xcompmgr with many bug fixes and many improvements compared
 the original. Using @code{sawfish-config} it is also possible to change most compton
 options directly from within Sawfish. [fuchur]
 
+@item Make @code{focus-when-mapped} window-matcher chooseable from 'never 'maybe and
+'always. 'never is suggested for KDE users to be applied to Plasma in order to prevent
+notification popups to take focus from currently active window (and possibly loosing
+keyboard input) [fuchur]
+
 @item Completeley revised @code{resize-window-prompt}. Now display window's name and old width
 (respectively old height) when prompt for new values. Shows an information, if one of the given
 values is not actually a number. [Christopher Bratusek]
