@@ -4,6 +4,12 @@
 
 	* lisp/sawfish/wm/user.jl: load sawfish.wm.prg.compton
 
+	* lisp/sawfish/wm/ext/match-window.jl
+	* lisp/sawfish/wm/state/transient.jl: make 'focus-when-mapped matcher
+	chooseable from 'never 'maybe and 'always. 'never is suggested for
+	KDE users to prevent notification popups to take focus from currently
+	active window (and possibly loosing keyboard input) [fuchur]
+
 	* doc/AUTOSTART
 	* man/news.texi: updated
 
